# kokoro-reader

./: .gitignore  Cargo.toml  README.md  build.rs  kokoro-reader.desktop
.cargo/: config.toml
.github/workflows/: android.yml  docker.yml  release.yml  rust.yml
android/: settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/kokoro/reader/: MainActivity.kt
android/app/src/main/java/com/kokoro/reader/data/: BookEntry.kt  Library.kt
android/app/src/main/java/com/kokoro/reader/tts/: ServerTtsEngine.kt  SherpaOnnxTts.kt  TtsEngine.kt  TtsService.kt
android/app/src/main/java/com/kokoro/reader/ui/: LibraryScreen.kt  ReaderScreen.kt  SettingsScreen.kt  Theme.kt
android/app/src/main/res/values/: themes.xml
desktop/: Makefile
desktop/src/: app.rs  library.rs  main.rs  pdf.rs
examples/: debug_page.rs  test_german.rs  test_piper.rs
server/: .dockerignore  Dockerfile  docker-compose.yml  go.mod  go.sum  main.go
server/data/: kokoro.db-shm  kokoro.db-wal
server/db/: db.go
server/handlers/: books.go  summary.go  tts.go
server/models-tts/: kokoro-en  piper-thorsten
server/tts/: download.go  engine.go
src/: app.rs  kokoro_engine.rs  lib.rs  library.rs  main.rs  pdf.rs  tts.rs
